kubernetes/service-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: spja-elb-svc
  namespace: springapps
spec:
  selector:
    app: spja
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 8080
