kubernetes/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: spja-svc-nodeport
  namespace: springapps
spec:
  type: NodePort
  selector:
    app: spja
  ports:
   -  protocol: TCP
      port: 8080
      targetPort: 8080
