kubernetes/alb-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spja-app
  namespace: springapps
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: spja-app
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: spja-svc-nodeport
              servicePort: 8080
