kubernetes/nginx-ingress-spja.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spja-ingress
  namespace: springapps
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /simple
          backend:
            serviceName: spja-service
            servicePort: 5678
